--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/
 
 # testing
 /coverage
@@ -13,6 +14,8 @@
 /src/assets
 
 # misc
+.eslintcache
+.yarnrc.yml
 .vscode/
 .DS_Store
 .env*
