--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.7",
     "@types/yup": "^0.29.11",
+    "eslint-config-react-app": "^6.0.0",
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-is": "^17.0.1",
+    "react-refresh": "^0.9.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
