--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.2.1",
-    "react-snap": "^1.23.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "react-snap": "^1.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
