--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/yup": "^0.29.11",
     "eslint-config-react-app": "^6.0.0",
     "formik": "^2.2.6",
+    "formik-material-ui": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
