--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-refresh": "^0.9.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "react-swipeable-views": "^0.13.9",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
